Set z-index to prevent conflict with EditDialogBox

--- a/src/container/PostPage.module.css
+++ b/src/container/PostPage.module.css
@@ -44,4 +44,5 @@
   height: 200px;
   flex: 1;
   margin: 10px 0;
+  z-index: 2;
 }
